--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "dewindt-farms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@stripe/stripe-js": "^1.46.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "@types/stripe": "^8.0.417"
   }
 }
