--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.0.7",
     "@stripe/stripe-js": "^1.46.0",
     "eslint": "8.29.0",
@@ -16,11 +17,15 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "stripe": "^11.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
-    "@types/stripe": "^8.0.417"
+    "@types/stripe": "^8.0.417",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
